cluster/apps/home/nextcloud/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app nextcloud
  namespace: home
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: nextcloud
          image: linuxserver/nextcloud:35.0.1
          imagePullPolicy: Always
          volumeMounts:
            - name: nextcloud-config-volume
              mountPath: /config
            - name: nextcloud-data-volume
              mountPath: /data
            - name: nextcloud-patches-volume
              mountPath: /custom-cont-init.d
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: nextcloud-config-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/nextcloud/nextcloud-config-volume
        - name: nextcloud-data-volume
          hostPath:
            path: /mnt/sdc1/nextcloud/data
        - name: nextcloud-patches-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/nextcloud/nextcloud-patches-volume
