cluster/apps/home/nextcloud/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: home
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
  loadBalancerIP: "${METALLB_NEXTCLOUD_ADDR}"
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  externalTrafficPolicy: Local
