cluster/apps/home/nextcloud/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app nextcloud
  namespace: home
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
      #  annotations:
      #    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
      #    external-dns/is-public: "true"
      #    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
      #    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: external
  rules:
    - host: "nextcloud.internal.${SECRET_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 443
  tls:
    - hosts:
        - "nextcloud.${SECRET_DOMAIN}"
